# deprecator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COOKBOOK.md  README.md  README.rst  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
deprecator/: __init__.py  _deprecations.py  _deprecator.py  _entrypoints.py  _init_command.py  _legacy.py  _pytest_plugin.py  _registry.py  _rich_display.py  _types.py  _warnings.py  cli.py  deprecator.py  ux.py
docs/: changelog.md  contributing.md  cookbook.md  getting-started.md  index.md  quick-start.md
docs/api/: cli.md  core.md  index.md  registry.md  warnings.md
docs/examples/: basic_deprecation.py  class_deprecation.py  complete_test.py  decorator_usage.py  manual_warning.py  package_setup.py  test_deprecation.py
docs/guides/: ci-integration.md  migration.md  testing.md
testing/: conftest.py  test_cli.py  test_deprecator.py  test_docs_examples.py  test_entrypoints.py  test_exposed_api.py  test_init_command.py  test_legacy_deprecator.py  test_pytest_plugin.py  test_registry.py  test_rich_display.py  test_warnings.py
