[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=75", "setuptools-scm>=9" ]

[project]
name = "deprecator"
description = "Deprecator provides a decorator to easily deprecate old code."
readme = "README.md"
keywords = [ "decorator", "deprecate", "deprecation", "warn", "warning" ]
license = { text = "Apache 2.0" }
maintainers = [
  { name = "Ronny Pfannschmidt", email = "opensource@ronnypfannschmidt.de" },
]
authors = [
  { name = "Anthony Long", email = "antlong@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

dynamic = [ "version" ]
urls.Homepage = "http://github.com/antlong/deprecator"

[project.entry-points.pytest11]
deprecator = "deprecator._pytest_plugin"

[project.entry-points."deprecator.deprecator"]
deprecator = "deprecator._deprecations:deprecator"

[project.entry-points."deprecator.registry"]
deprecator = "deprecator._registry:default_registry"

[project.scripts]
deprecator = "deprecator.cli:main"

[dependency-groups]
dev = [
  "build>=0.10",
  "mypy>=1",
  "pre-commit>=3",
  "ruff>=0.1",
  "twine>=4",
  "typing-extensions>=4",
]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[tool.setuptools]
packages = [ "deprecator" ]

[tool.ruff]
format.line-ending = "lf"
lint.extend-select = [
  "ANN",
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "C90",
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "G",
  "I",   # isort
  "LOG",
  "RUF",
  "SIM",
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.future-annotations = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --cov-report=term-missing -p pytester"
testpaths = ["testing"]

[tool.coverage.run]
source = [ "deprecator" ]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.uv]
default-groups = [ "dev", "test" ]
